--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8421,3 +8421,11 @@ body {
   color: inherit;
 }
 
+/* User register page */
+
+.register-page img.captcha {
+  margin-bottom: 0px;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
